started change welcome page

--- a/src/i18n/strings/ar.json
+++ b/src/i18n/strings/ar.json
@@ -3,7 +3,7 @@
     "Unknown device": "جهاز مجهول",
     "You need to be using HTTPS to place a screen-sharing call.": "عليك استعمال ميفاق HTTPS للاتصال بمشاركة الشاشة.",
     "powered by Matrix": "مشغل بواسطة Matrix",
-    "Welcome to Element": "مرحبًا بك في Element",
+    "Welcome to Sumra Chat": "مرحبًا بك في Sumra Chat",
     "Decentralised, encrypted chat &amp; collaboration powered by [matrix]": "دردشة وتعاون غير مركزي معمّى، تدعمه [matrix]",
     "Create Account": "أنشِئ حسابًا",
     "Explore rooms": "استكشِف الغرف",
