--- a/src/i18n/strings/bg.json
+++ b/src/i18n/strings/bg.json
@@ -3,7 +3,7 @@
     "You need to be using HTTPS to place a screen-sharing call.": "Трябва да използвате HTTPS, за да споделите екрана си.",
     "Dismiss": "Затвори",
     "powered by Matrix": "базирано на Matrix",
-    "Welcome to Element": "Добре дошли в Element",
+    "Welcome to Sumra Chat": "Добре дошли в Sumra Chat",
     "Decentralised, encrypted chat &amp; collaboration powered by [matrix]": "Децентрализиран, шифрован чат и съвместна работа, базирани на [matrix]",
     "Sign In": "Вписване",
     "Create Account": "Създай профил",
