--- a/src/i18n/strings/ca.json
+++ b/src/i18n/strings/ca.json
@@ -1,7 +1,7 @@
 {
     "Dismiss": "Omet",
     "Unknown device": "Dispositiu desconegut",
-    "Welcome to Element": "Benvingut/da a Element",
+    "Welcome to Sumra Chat": "Benvingut/da a Sumra Chat",
     "You need to be using HTTPS to place a screen-sharing call.": "Has d'utilitzar HTTPS per poder fer una trucada amb pantalla compartida.",
     "powered by Matrix": "amb tecnologia de Matrix",
     "Decentralised, encrypted chat &amp; collaboration powered by [matrix]": "Xat descentralitzat, xifrat i col·laboratiu amb tecnologia de [matrix]",
