--- a/src/i18n/strings/cs.json
+++ b/src/i18n/strings/cs.json
@@ -1,5 +1,5 @@
 {
-    "Welcome to Element": "Vítá vás Element",
+    "Welcome to Sumra Chat": "Vítá vás Sumra Chat",
     "Unknown device": "Neznámé zařízení",
     "You need to be using HTTPS to place a screen-sharing call.": "Pro uskutečnění hovoru se sdílením obrazovky musíte používat HTTPS.",
     "Dismiss": "Zavřít",
