--- a/src/i18n/strings/de_DE.json
+++ b/src/i18n/strings/de_DE.json
@@ -3,7 +3,7 @@
     "Dismiss": "Ausblenden",
     "Unknown device": "Unbekanntes Gerät",
     "You need to be using HTTPS to place a screen-sharing call.": "Du musst HTTPS nutzen um einen Anruf mit Bildschirmfreigabe durchzuführen.",
-    "Welcome to Element": "Willkommen bei Element",
+    "Welcome to Sumra Chat": "Willkommen bei Sumra Chat",
     "Decentralised, encrypted chat &amp; collaboration powered by [matrix]": "Dezentrale, verschlüsselte Chat- &amp; Kollaborationslösung mittels [matrix]",
     "Sign In": "Anmelden",
     "Create Account": "Konto erstellen",
