--- a/src/i18n/strings/bs.json
+++ b/src/i18n/strings/bs.json
@@ -27,7 +27,7 @@
     "I understand the risks and wish to continue": "Razumijem rizike i želim nastaviti",
     "Go to element.io": "Idite na element.io",
     "Failed to start": "Pokretanje nije uspjelo",
-    "Welcome to Element": "Dobrodošli u Element",
+    "Welcome to Sumra Chat": "Dobrodošli u Sumra Chat",
     "Decentralised, encrypted chat &amp; collaboration powered by [matrix]": "Decentralizirani, šifrirani razgovor &amp; suradnja pokrenuta [matrix]",
     "Sign In": "Prijavite se",
     "Create Account": "Otvori račun",
