--- a/src/i18n/strings/el.json
+++ b/src/i18n/strings/el.json
@@ -3,7 +3,7 @@
     "Unknown device": "Άγνωστη συσκευή",
     "You need to be using HTTPS to place a screen-sharing call.": "Απαιτείται η χρήση HTTPS για την πραγματοποίηση κλήσης διαμοιρασμού επιφάνειας εργασίας.",
     "powered by Matrix": "λειτουργεί με το Matrix",
-    "Welcome to Element": "Καλώς ήλθατε στο Element",
+    "Welcome to Sumra Chat": "Καλώς ήλθατε στο Sumra Chat",
     "Decentralised, encrypted chat &amp; collaboration powered by [matrix]": "Αποκεντρωμένη, κρυπτογραφημένη συνεργασία συνομιλίας χρησιμοποιώντας το [matrix]",
     "Sign In": "Σύνδεση",
     "Create Account": "Δημιουργία Λογαριασμού",
