added single sign-in button

--- a/src/i18n/strings/en_US.json
+++ b/src/i18n/strings/en_US.json
@@ -34,5 +34,6 @@
     "Your Element is misconfigured": "Your Element is misconfigured",
     "Missing indexeddb worker script!": "Missing indexeddb worker script!",
     "Login with Sumra ID": "Login with Sumra ID",
-    "Sign up": "Sign up"
+    "Sign up": "Sign up",
+    "SIGN UP": "SIGN UP"
 }
