--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -34,5 +34,6 @@
     "Create Account": "Create Account",
     "Explore rooms": "Explore rooms",
     "Login with Sumra ID": "Login with Sumra ID",
-    "Sign up": "Sign up"
+    "Sign up": "Sign up",
+    "SIGN UP": "SIGN UP"
 }
